# pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
fixtures/sessions/: tenant-auth-fix.json
pipeline/: cli.py  devin.py  models.py  orchestrator.py  state.py
pipeline/dashboard/: app.py
pipeline/dashboard/static/: index.html
tests/: conftest.py  test_cli.py  test_dashboard.py  test_devin.py  test_models.py  test_orchestrator.py  test_state.py
