[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "aiosqlite>=0.20",
    "rich>=13",
    "click>=8",
]

[project.scripts]
pipeline = "pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
